argo/user-service-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: user-service
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: user-service-canary
      stableService: user-service
      trafficRouting:
        istio:
          virtualService:
            name: user-service-vs
            routes:
              - primary
      steps:
        - setWeight: 20
        - pause: { duration: 30s }
        - setWeight: 60
        - pause: { duration: 30s }
        - setWeight: 100
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 442122590814.dkr.ecr.us-east-1.amazonaws.com/user-service:3
          ports:
            - containerPort: 80
